infra-code/10-alb-security-group.tf
resource "aws_security_group" "alb_sg" {
  name        = "${var.production_vpc}-alb-sg"
  description = "Allow HTTP traffic to ALB"
  vpc_id      = aws_vpc.terraform_main_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "${var.production_vpc}-alb-sg"
  }
}
