infra-code/11-app-security-group.tf
resource "aws_security_group" "app_sg" {
  name        = "${var.production_vpc}-app-sg"
  description = "Allow traffic from ALB"
  vpc_id      = aws_vpc.terraform_main_vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }
  ingress {
    from_port       = 443
    to_port         = 443
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.production_vpc}-app-sg"
  }
}
